--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,4 @@
-.ausgangsWert {
-    top: 20%;
-    left: 10%;
-    background-color: #FCFCFC;
-    margin-left: auto;
-}
-
-.dropbtn-links, 
-.dropdown {
-    left: 50%;
-    top: 20%;
-    margin-left: auto;
-}
-
-.dropdown {
-    top: 30%;
-}
-
-.entsprichtZeichen {
-    font-size: 500%;
-    position: fixed;
-    top: 20%;
-    left: 82%;
-    margin-left: auto;
-}
-
-.endWertAusgaben{
-    position: fixed;
-    top: 40%;
-    left: 10%;
-    margin-left: auto;
-}
-
-.dropbtn-rechts,
-.dropdown1 {
-    top: 40%;
-    left: 50%;
-    margin-left: auto;
-}
-
-.dropdown1 {
-    top: 50%;
-}
-
-.submit {
-    top: 60%;
-    left: 30%;
-    margin-left: auto;
-}
-
+.entsprichtZeichen,
 .dropdown,
 .dropdown1,
 .ausgangsWert,
@@ -59,6 +10,20 @@
     width: 30%;
     position: fixed;
     display: inline-block;
+}
+
+.submit,
+.ausgangsWert,
+.dropbtn,
+.endWertAusgaben {
+    padding: 5px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    background-color: #eeeded;
+    border-style: solid;
+    border-color: rgb(0, 0, 0);
+    border-width: 1px;
 }
 
 .dropdown-content,
@@ -97,26 +62,49 @@
     display: block;
 }
 
-.submit,
-.ausgangsWert,
-.dropbtn,
-.endWertAusgaben {
-
-
-    box-sizing: border-box;
-    padding: 5px;
-    
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    background-color: #eeeded;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    z-index: 1;
-}
-
 .endWertAusgabeWert,
 .endWertAusgabeKonstanten {
     width: 80%;
+}
+
+.ausgangsWert {
+    top: 20%;
+    left: 10%;
+}
+
+.dropbtn-start, 
+.dropdown {
+    top: 20%;
+    left: 50%;
+}
+
+.dropdown {
+    top: 30%;
+}
+
+.entsprichtZeichen {
+    top: 20%;
+    left: 82%;
+    font-size: 500%;
+}
+
+.endWertAusgaben{
+    top: 40%;
+    left: 10%;
+}
+
+.dropbtn-ziel,
+.dropdown1 {
+    top: 40%;
+    left: 50%;
+}
+
+.dropdown1 {
+    top: 50%;
+}
+
+.submit {
+    top: 60%;
+    left: 30%;
+    z-index: -1;
 }
